@@ -1,5 +1,8 @@
 shady-KISS-skin History
 -------------------------------------------
+2015-08-09:
+- Added horizontal menu in displaymenurecordings
+
 2015-08-01:
 - Added discusage in menutimers, made ist optional
 
